--- a/index.html
+++ b/index.html
@@ -7,47 +7,46 @@
 	<title>Document</title>
 </head>
 <body>
-	<div class="container">
-		<div class="inner">
-			<div class="item" id="item1">
-				<img src="1.png" alt="" class="img">
-                <p>Стоимость: 600</p>
-				<button class="btn" id="btn1">Добавить в корзину</button>
-			</div>
+    <div class="center">
+        <div class="container">
+            <div class="inner">
+                <div class="item" id="item1">
+                    <img src="1.png" alt="" class="img">
+                    <p>Стоимость: 600</p>
+                    <button class="btn" id="btn1">Добавить в корзину</button>
+                </div>
 
-			<div class="item" id="item2">
-				<img src="1.png" alt="" class="img">
-                <p>Стоимость: 450</p>
-				<button class="btn" id="btn2">Добавить в корзину</button>
-			</div>
+                <div class="item" id="item2">
+                    <img src="1.png" alt="" class="img">
+                    <p>Стоимость: 450</p>
+                    <button class="btn" id="btn2">Добавить в корзину</button>
+                </div>
 
-			<div class="item" id="item3">
-				<img src="1.png" alt="" class="img">
-                <p>Стоимость: 580</p>
-				<button class="btn" id="btn3">Добавить в корзину</button>
-			</div>
+                <div class="item" id="item3">
+                    <img src="1.png" alt="" class="img">
+                    <p>Стоимость: 580</p>
+                    <button class="btn" id="btn3">Добавить в корзину</button>
+                </div>
 
-			<div class="item" id="item4">
-				<img src="1.png" alt="" class="img">
-                <p>Стоимость: 490</p>
-				<button class="btn" id="btn4">Добавить в корзину</button>
-			</div>
+                <div class="item" id="item4">
+                    <img src="1.png" alt="" class="img">
+                    <p>Стоимость: 490</p>
+                    <button class="btn" id="btn4">Добавить в корзину</button>
+                </div>
 
-			<div class="item" id="item5">
-				<img src="1.png" alt="" class="img">
-                <p>Стоимость: 600</p>
-				<button class="btn" id="btn5">Добавить в корзину</button>
-			</div>
+                <div class="item" id="item5">
+                    <img src="1.png" alt="" class="img">
+                    <p>Стоимость: 600</p>
+                    <button class="btn" id="btn5">Добавить в корзину</button>
+                </div>
 
-			<div class="item" id="item6">
-				<img src="1.png" alt="" class="img">
-                <p>Стоимость: 610</p>
-				<button class="btn" id="btn6">Добавить в корзину</button>
-			</div>
-		</div>
-	</div>
-	<div class="usercard" id="usercard">
-		
+                <div class="item" id="item6">
+                    <img src="1.png" alt="" class="img">
+                    <p>Стоимость: 610</p>
+                    <button class="btn" id="btn6">Добавить в корзину</button>
+                </div>
+            </div>
+	    </div>		
 	</div>
 
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
