--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="inner">
                 <div class="item" id="item1">
-                    <img src="1.gif" alt="" class="img">
+                    <img src="1.gif" alt="" class="gif">
                     <p>Стоимость: 600</p>
                     <button class="btn" id="btn1">Добавить в корзину</button>
                 </div>
