--- a/index.html
+++ b/index.html
@@ -13,37 +13,37 @@
                 <div class="item" id="item1">
                     <img src="pizza.gif" alt="" class="img">
                     <p>Стоимость: 600</p>
-                    <button class="btn" id="btn1">Добавить в корзину</button>
+                    <button class="btn" id="btn1">Добавить</button>
                 </div>
 
                 <div class="item" id="item2">
                     <img src="burger.gif" alt="" class="img">
                     <p>Стоимость: 450</p>
-                    <button class="btn" id="btn2">Добавить в корзину</button>
+                    <button class="btn" id="btn2">Добавить</button>
                 </div>
 
                 <div class="item" id="item3">
                     <img src="onigiri.gif" alt="" class="img">
                     <p>Стоимость: 580</p>
-                    <button class="btn" id="btn3">Добавить в корзину</button>
+                    <button class="btn" id="btn3">Добавить</button>
                 </div>
 
                 <div class="item" id="item4">
                     <img src="rice.gif" alt="" class="img">
                     <p>Стоимость: 490</p>
-                    <button class="btn" id="btn4">Добавить в корзину</button>
+                    <button class="btn" id="btn4">Добавить</button>
                 </div>
 
                 <div class="item" id="item5">
                     <img src="roll.gif" alt="" class="img">
                     <p>Стоимость: 600</p>
-                    <button class="btn" id="btn5">Добавить в корзину</button>
+                    <button class="btn" id="btn5">Добавить</button>
                 </div>
 
                 <div class="item" id="item6">
                     <img src="kola.gif" alt="" class="img">
                     <p>Стоимость: 610</p>
-                    <button class="btn" id="btn6">Добавить в корзину</button>
+                    <button class="btn" id="btn6">Добавить</button>
                 </div>
             </div>
 	    </div>		
