--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
         <div class="container">
             <div class="inner">
                 <div class="item" id="item1">
-                    <img src="pizza.gif" alt="" class="img">
+                    <img src="burger.png" alt="" class="img">
                     <p>pizza - <b>600Р</b></p>
                     <button class="btn" id="btn1">Добавить</button>
                 </div>
 
                 <div class="item" id="item2">
-                    <img src="burger.gif" alt="" class="img">
+                    <img src="pizza.png" alt="" class="img">
                     <p>burger - <b>450Р</b></p>
                     <button class="btn" id="btn2">Добавить</button>
                 </div>
 
                 <div class="item" id="item3">
-                    <img src="onigiri.gif" alt="" class="img">
+                    <img src="wok.png" alt="" class="img">
                     <p>onigiri - <b>580Р</b></p>
                     <button class="btn" id="btn3">Добавить</button>
                 </div>
 
                 <div class="item" id="item4">
-                    <img src="rice.gif" alt="" class="img">
+                    <img src="onigiri.png" alt="" class="img">
                     <p>rice - <b>490Р</b></p>
                     <button class="btn" id="btn4">Добавить</button>
                 </div>
 
                 <div class="item" id="item5">
-                    <img src="roll.gif" alt="" class="img">
+                    <img src="roll.png" alt="" class="img">
                     <p>roll - <b>600Р</b></p>
                     <button class="btn" id="btn5">Добавить</button>
                 </div>
 
                 <div class="item" id="item6">
-                    <img src="kola.gif" alt="" class="img">
+                    <img src="juice.png" alt="" class="img">
                     <p>colla - <b>610Р</b></p>
                     <button class="btn" id="btn6">Добавить</button>
                 </div>
