--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <div class="item" id="item6">
                     <img src="juice.png" alt="" class="img">
-                    <p>colla - <b>610Р</b></p>
+                    <p>juice - <b>610Р</b></p>
                     <button class="btn" id="btn6">Добавить</button>
                 </div>
             </div>
