--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
             </div>
 	    </div>		
 	</div>
-
+    <form id="order-form" style="display: none;">
+        <label for="full-name">Ваше имя:</label>
+        <input type="text" id="full-name" name="full-name" required><br>
+    
+        <label for="address">Адрес доставки:</label>
+        <input type="text" id="address" name="address" required><br>
+    
+        <button type="submit" id="submit-order">Оформить заказ</button>
+    </form>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script src="app.js"></script>
 </body>
