--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
 	    </div>		
 	</div>
-    <form id="order-form" style="display: none;">
+    <div id="order-form" style="display: none;">
         <label for="full-name">Ваше имя:</label>
         <input type="text" id="full-name" name="full-name" required><br>
     
@@ -81,7 +81,7 @@
         <input type="text" id="address" name="address" required><br>
     
         <button type="submit" id="submit-order">Оформить заказ</button>
-    </form>
+    </div>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script src="app.js"></script>
 </body>
