--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div class="inner">
                 <div class="item" id="item1">
                     <img src="burger.png" alt="" class="img">
+                    <div id="total-price">0</div>
                     <p>burger - <b>600Р</b></p>
                     <button class="btn" id="btn1">Добавить</button>
                 </div>
@@ -45,43 +46,10 @@
                     <p>juice - <b>610Р</b></p>
                     <button class="btn" id="btn6">Добавить</button>
                 </div>
-
-                <!-- Элементы для отображения заказа и формы оплаты -->
-                <div id="order-summary" style="display: none;">
-                    <h2>Ваш заказ</h2>
-                    <ul id="order-items"></ul>
-                    <p id="total-price">Общая сумма: 0Р</p>
-                    <button id="view-order">Просмотр заказа</button>
-                </div>
-                <div id="payment-form" style="display: none;">
-                    <h2>Оплата</h2>
-                    <form id="payment-form">
-                        <label for="name">Имя:</label>
-                        <input type="text" id="name" name="name" required><br>
-                        <label for="address">Адрес:</label>
-                        <input type="text" id="address" name="address" required><br>
-                        <label for="phone">Телефон:</label>
-                        <input type="tel" id="phone" name="phone" required><br>
-                        <label for="payment-method">Способ оплаты:</label>
-                        <select id="payment-method" name="payment-method" required>
-                            <option value="cash">Наличные</option>
-                            <option value="card">Карта</option>
-                        </select><br>
-                        <button type="submit" id="pay">Оплатить</button>
-                    </form>
-                </div>
             </div>
 	    </div>		
 	</div>
-    <div id="order-form" style="display: none;">
-        <label for="full-name">Ваше имя:</label>
-        <input type="text" id="full-name" name="full-name" required><br>
-    
-        <label for="address">Адрес доставки:</label>
-        <input type="text" id="address" name="address" required><br>
-    
-        <button type="submit" id="submit-order">Оформить заказ</button>
-    </div>
+
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script src="app.js"></script>
 </body>
