--- a/index.html
+++ b/index.html
@@ -11,39 +11,39 @@
         <div class="container">
             <div class="inner">
                 <div class="item" id="item1">
-                    <img src="burger.png" alt="" class="img">
+                    <img src="burger.png" alt="" class="img" id="burger-img">
                     <p>burger - <b>600Р</b></p>
-                    <button class="btn" id="btn1">Добавить</button>
+                    <button class="btn" id="btn1" onclick="playAnimation('burger-img', 'burger.gif')">Добавить</button>
                 </div>
-
+                
                 <div class="item" id="item2">
-                    <img src="pizza.png" alt="" class="img">
+                    <img src="pizza.png" alt="" class="img" id="pizza-img">
                     <p>pizza - <b>450Р</b></p>
-                    <button class="btn" id="btn2">Добавить</button>
+                    <button class="btn" id="btn2" onclick="playAnimation('pizza-img', 'pizza-animation.gif')">Добавить</button>
                 </div>
-
+                
                 <div class="item" id="item3">
-                    <img src="wok.png" alt="" class="img">
+                    <img src="wok.png" alt="" class="img" id="wok-img">
                     <p>onigiri - <b>580Р</b></p>
-                    <button class="btn" id="btn3">Добавить</button>
+                    <button class="btn" id="btn3" onclick="playAnimation('wok-img', 'wok-animation.gif')">Добавить</button>
                 </div>
 
                 <div class="item" id="item4">
-                    <img src="onigiri.png" alt="" class="img">
+                    <img src="onigiri.png" alt="" class="img" id="onigiri-img">
                     <p>rice - <b>490Р</b></p>
-                    <button class="btn" id="btn4">Добавить</button>
+                    <button class="btn" id="btn4"onclick="playAnimation('onigiri-img', 'wok-animation.gif')">Добавить</button>
                 </div>
 
                 <div class="item" id="item5">
-                    <img src="roll.png" alt="" class="img">
+                    <img src="roll.png" alt="" class="img" id="roll-img">
                     <p>roll - <b>600Р</b></p>
-                    <button class="btn" id="btn5">Добавить</button>
+                    <button class="btn" id="btn5" onclick="playAnimation('roll-img', 'wok-animation.gif')">Добавить</button>
                 </div>
 
                 <div class="item" id="item6">
-                    <img src="juice.png" alt="" class="img">
+                    <img src="juice.png" alt="" class="img" id="juice-img">
                     <p>juice - <b>610Р</b></p>
-                    <button class="btn" id="btn6">Добавить</button>
+                    <button class="btn" id="btn6" onclick="playAnimation('juice-img', 'wok-animation.gif')">Добавить</button>
                 </div>
             </div>
         </div>
