--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="quantity-control">
                         <button class="minus-btn" id="minusBtn1" onclick="decrementQuantity('quantity1')">-</button>
                         <span id="quantity1">0</span>
-                        <button class="plus-btn" id="plusBtn1" onclick="incrementQuantity('quantity1'); playAnimation('burger-img', 'burger.gif')">+</button>
+                        <button class="plus-btn" id="plusBtn1" onclick="incrementQuantity('quantity1'); playAnimation('burger-img', 'burger.gif'); updateTotalPrice()">+</button>
                     </div>
                 </div>
                 
