--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
             <div class="inner">
                 <div class="item" id="item1">
                     <img src="burger.png" alt="" class="img" id="burger-img">
-                    <p>pizza - <b>450Р</b></p>
-                    <div class="quantity-control">
-                        <button class="minus-btn" id="minusBtn1" onclick="decrementQuantity('quantity1')">-</button>
-                        <span id="quantity1">0</span>
-                        <button class="plus-btn" id="plusBtn1" onclick="incrementQuantity('quantity1'); playAnimation('burger-img', 'burger.gif'); updateTotalPrice()">+</button>
-                    </div>
+                    <p>burger - <b>600Р</b></p>
+                    <button class="btn" id="btn1" onclick="playAnimation('burger-img', 'burger.gif')">Добавить</button>
                 </div>
                 
                 <div class="item" id="item2">
