--- a/index.html
+++ b/index.html
@@ -33,25 +33,41 @@
                 <div class="item" id="item3">
                     <img src="wok.png" alt="" class="img" id="wok-img">
                     <p>onigiri - <b>580Р</b></p>
-                    <button class="btn" id="btn3" onclick="playAnimation('wok-img', 'wok-animation.gif')">Добавить</button>
+                    <div class="quantity-control">
+                        <button class="btn" id="minusBtn3" onclick="decrementQuantity('quantity3')">-</button>
+                        <span id="quantity3">0</span>
+                        <button class="btn" id="btn3" onclick="incrementQuantity('quantity3'); playAnimation('wok-img', 'wok-animation.gif');">+</button>
+                    </div>
                 </div>
 
                 <div class="item" id="item4">
                     <img src="onigiri.png" alt="" class="img" id="onigiri-img">
                     <p>rice - <b>490Р</b></p>
-                    <button class="btn" id="btn4"onclick="playAnimation('onigiri-img', 'wok-animation.gif')">Добавить</button>
+                    <div class="quantity-control">
+                        <button class="btn" id="minusBtn4" onclick="decrementQuantity('quantity4')">-</button>
+                        <span id="quantity4">0</span>
+                        <button class="btn" id="btn4" onclick="incrementQuantity('quantity4'); playAnimation('onigiri-img', 'onigiri-animation.gif');">+</button>
+                    </div>
                 </div>
 
                 <div class="item" id="item5">
                     <img src="roll.png" alt="" class="img" id="roll-img">
                     <p>roll - <b>600Р</b></p>
-                    <button class="btn" id="btn5" onclick="playAnimation('roll-img', 'wok-animation.gif')">Добавить</button>
+                    <div class="quantity-control">
+                        <button class="btn" id="minusBtn5" onclick="decrementQuantity('quantity5')">-</button>
+                        <span id="quantity5">0</span>
+                        <button class="btn" id="btn5" onclick="incrementQuantity('quantity5'); playAnimation('roll-img', 'roll-animation.gif');">+</button>
+                    </div>
                 </div>
 
                 <div class="item" id="item6">
                     <img src="juice.png" alt="" class="img" id="juice-img">
                     <p>juice - <b>610Р</b></p>
-                    <button class="btn" id="btn6" onclick="playAnimation('juice-img', 'wok-animation.gif')">Добавить</button>
+                    <div class="quantity-control">
+                        <button class="btn" id="minusBtn6" onclick="decrementQuantity('quantity6')">-</button>
+                        <span id="quantity6">0</span>
+                        <button class="btn" id="btn6" onclick="incrementQuantity('quantity6'); playAnimation('juice-img', 'juice-animation.gif');">+</button>
+                    </div>
                 </div>
             </div>
         </div>
