--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                         <button class="btn" id="btn6" onclick="incrementQuantity('quantity6'); playAnimation('juice-img', 'juice-animation.gif');">+</button>
                     </div>
                 </div>
+                <div>
+                    <label for="address">Введите ваш адрес:</label><br>
+                    <input type="text" id="address" name="address"><br><br>
+                </div>
+                <!-- Кнопка "Готово" -->
+                <button class="btn" id="confirm-button" onclick="confirmOrder()">Готово</button>
             </div>
         </div>
     </div>
