--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <div>
                     <label for="address">Введите ваш адрес:</label><br>
                     <input type="text" id="address" name="address"><br><br>
+                    <button class="btn" id="submitAddressBtn">Готово</button> <!-- Кнопка "Готово" для ввода адреса -->
                 </div>
             </div>
         </div>
