--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div>
                     <label for="address">Введите ваш адрес:</label><br>
                     <input type="text" id="address" name="address"><br><br>
-                    <button class="btn" id="submitAddressBtn">Готово</button> <!-- Кнопка "Готово" для ввода адреса -->
+                    <button id="submitAddressBtn" class="btn">Готово</button>
                 </div>
             </div>
         </div>
