--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="blue-bar" id="blueBar">
+        <p id="savedAddressMessage">Адрес сохранен</p>
+    </div> <!-- Синяя полоска -->
     <div class="center">
         <div class="container">
             <div class="inner">
