--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <input type="text" id="address" name="address"><br><br>
                 <button id="submitAddressBtn" class="btn">Готово</button>
             </div>
-            <div class="inner">
+            <div class="inner" id="itemsContainer">
                 <div class="item" id="item1">
                     <img src="burger.png" alt="" class="img" id="burger-img">
                     <p>burger - <b>600Р</b></p>
