--- a/index.html
+++ b/index.html
@@ -11,62 +11,62 @@
         <div class="container">
             <div class="inner" id="itemsContainer">
                 <div class="item" id="item1">
-                    <img src="img/burger.png" alt="" class="img" id="burger-img">
+                    <img src="burger.png" alt="" class="img" id="burger-img">
                     <p>burger - <b>600Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn1" onclick="decrementQuantity('quantity1')">-</button>
                         <span id="quantity1">0</span>
-                        <button class="btn" id="btn1" onclick="incrementQuantity('quantity1')">+</button>
+                        <button class="btn" id="btn1" onclick="incrementQuantity('quantity1'); playAnimation('burger-img', 'burger.gif');">+</button>
                     </div>
                 </div>
                 
                 <div class="item" id="item2">
-                    <img src="img/pizza.png" alt="" class="img" id="pizza-img">
+                    <img src="pizza.png" alt="" class="img" id="pizza-img">
                     <p>pizza - <b>450Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn2" onclick="decrementQuantity('quantity2')">-</button>
                         <span id="quantity2">0</span>
-                        <button class="btn" id="btn2" onclick="incrementQuantity('quantity2')">+</button>
+                        <button class="btn" id="btn2" onclick="incrementQuantity('quantity2'); playAnimation('pizza-img', 'pizza.gif');">+</button>
                     </div>
                 </div>
                 
                 <div class="item" id="item3">
-                    <img src="img/wok.png" alt="" class="img" id="wok-img">
+                    <img src="wok.png" alt="" class="img" id="wok-img">
                     <p>wok - <b>580Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn3" onclick="decrementQuantity('quantity3')">-</button>
                         <span id="quantity3">0</span>
-                        <button class="btn" id="btn3" onclick="incrementQuantity('quantity3')">+</button>
+                        <button class="btn" id="btn3" onclick="incrementQuantity('quantity3'); playAnimation('wok-img', 'wok.gif');">+</button>
                     </div>
                 </div>
 
                 <div class="item" id="item4">
-                    <img src="img/onigiri.png" alt="" class="img" id="onigiri-img">
+                    <img src="onigiri.png" alt="" class="img" id="onigiri-img">
                     <p>onigiri - <b>490Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn4" onclick="decrementQuantity('quantity4')">-</button>
                         <span id="quantity4">0</span>
-                        <button class="btn" id="btn4" onclick="incrementQuantity('quantity4');">+</button>
+                        <button class="btn" id="btn4" onclick="incrementQuantity('quantity4'); playAnimation('onigiri-img', 'onigiri.gif');">+</button>
                     </div>
                 </div>
 
                 <div class="item" id="item5">
-                    <img src="img/beer.png" alt="" class="img" id="roll-img">
+                    <img src="beer.png" alt="" class="img" id="roll-img">
                     <p>beer - <b>150Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn5" onclick="decrementQuantity('quantity5')">-</button>
                         <span id="quantity5">0</span>
-                        <button class="btn" id="btn5" onclick="incrementQuantity('quantity5');">+</button>
+                        <button class="btn" id="btn5" onclick="incrementQuantity('quantity5'); playAnimation('roll-img', 'beer.gif');">+</button>
                     </div>
                 </div>
 
                 <div class="item" id="item6">
-                    <img src="img/juice.png" alt="" class="img" id="juice-img">
+                    <img src="juice.png" alt="" class="img" id="juice-img">
                     <p>juice - <b>610Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn6" onclick="decrementQuantity('quantity6')">-</button>
                         <span id="quantity6">0</span>
-                        <button class="btn" id="btn6" onclick="incrementQuantity('quantity6');">+</button>
+                        <button class="btn" id="btn6" onclick="incrementQuantity('quantity6'); playAnimation('juice-img', 'juice.gif');">+</button>
                     </div>
                 </div>
             </div>
