--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="center">
         <div class="container">
-            <div class="inner" id="itemsContainer">
+            <div class="inner">
                 <div class="item" id="item1">
                     <img src="burger.png" alt="" class="img" id="burger-img">
                     <p>burger - <b>600Р</b></p>
@@ -26,37 +26,37 @@
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn2" onclick="decrementQuantity('quantity2')">-</button>
                         <span id="quantity2">0</span>
-                        <button class="btn" id="btn2" onclick="incrementQuantity('quantity2'); playAnimation('pizza-img', 'pizza.gif');">+</button>
+                        <button class="btn" id="btn2" onclick="incrementQuantity('quantity2'); playAnimation('pizza-img', 'pizza-animation.gif');">+</button>
                     </div>
                 </div>
                 
                 <div class="item" id="item3">
                     <img src="wok.png" alt="" class="img" id="wok-img">
-                    <p>wok - <b>580Р</b></p>
+                    <p>onigiri - <b>580Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn3" onclick="decrementQuantity('quantity3')">-</button>
                         <span id="quantity3">0</span>
-                        <button class="btn" id="btn3" onclick="incrementQuantity('quantity3'); playAnimation('wok-img', 'wok.gif');">+</button>
+                        <button class="btn" id="btn3" onclick="incrementQuantity('quantity3'); playAnimation('wok-img', 'wok-animation.gif');">+</button>
                     </div>
                 </div>
 
                 <div class="item" id="item4">
                     <img src="onigiri.png" alt="" class="img" id="onigiri-img">
-                    <p>onigiri - <b>490Р</b></p>
+                    <p>rice - <b>490Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn4" onclick="decrementQuantity('quantity4')">-</button>
                         <span id="quantity4">0</span>
-                        <button class="btn" id="btn4" onclick="incrementQuantity('quantity4'); playAnimation('onigiri-img', 'onigiri.gif');">+</button>
+                        <button class="btn" id="btn4" onclick="incrementQuantity('quantity4'); playAnimation('onigiri-img', 'onigiri-animation.gif');">+</button>
                     </div>
                 </div>
 
                 <div class="item" id="item5">
-                    <img src="beer.png" alt="" class="img" id="roll-img">
-                    <p>beer - <b>150Р</b></p>
+                    <img src="roll.png" alt="" class="img" id="roll-img">
+                    <p>roll - <b>600Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn5" onclick="decrementQuantity('quantity5')">-</button>
                         <span id="quantity5">0</span>
-                        <button class="btn" id="btn5" onclick="incrementQuantity('quantity5'); playAnimation('roll-img', 'beer.gif');">+</button>
+                        <button class="btn" id="btn5" onclick="incrementQuantity('quantity5'); playAnimation('roll-img', 'roll-animation.gif');">+</button>
                     </div>
                 </div>
 
@@ -66,7 +66,7 @@
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn6" onclick="decrementQuantity('quantity6')">-</button>
                         <span id="quantity6">0</span>
-                        <button class="btn" id="btn6" onclick="incrementQuantity('quantity6'); playAnimation('juice-img', 'juice.gif');">+</button>
+                        <button class="btn" id="btn6" onclick="incrementQuantity('quantity6'); playAnimation('juice-img', 'juice-animation.gif');">+</button>
                     </div>
                 </div>
             </div>
