--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <div class="container">
             <div class="inner">
                 <div class="item" id="item1">
-                    <img src="burger.png" alt="" class="img" id="burger-img">
+                    <img src="img/set 1.jpg" alt="" class="img" id="burger-img">
                     <p>burger - <b>600Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn1" onclick="decrementQuantity('quantity1')">-</button>
                         <span id="quantity1">0</span>
-                        <button class="btn" id="btn1" onclick="incrementQuantity('quantity1'); playAnimation('burger-img', 'burger.gif');">+</button>
+                        <button class="btn" id="btn1" onclick="incrementQuantity('quantity1');">+</button>
                     </div>
                 </div>
                 
                 <div class="item" id="item2">
-                    <img src="pizza.png" alt="" class="img" id="pizza-img">
+                    <img src="img/set 2.jpeg" alt="" class="img" id="pizza-img">
                     <p>pizza - <b>450Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn2" onclick="decrementQuantity('quantity2')">-</button>
@@ -31,7 +31,7 @@
                 </div>
                 
                 <div class="item" id="item3">
-                    <img src="wok.png" alt="" class="img" id="wok-img">
+                    <img src="img/set 3.jpg" alt="" class="img" id="wok-img">
                     <p>onigiri - <b>580Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn3" onclick="decrementQuantity('quantity3')">-</button>
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="item" id="item4">
-                    <img src="onigiri.png" alt="" class="img" id="onigiri-img">
+                    <img src="img/set 4.jpg" alt="" class="img" id="onigiri-img">
                     <p>rice - <b>490Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn4" onclick="decrementQuantity('quantity4')">-</button>
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="item" id="item5">
-                    <img src="roll.png" alt="" class="img" id="roll-img">
+                    <img src="img/set 5.jpg" alt="" class="img" id="roll-img">
                     <p>roll - <b>600Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn5" onclick="decrementQuantity('quantity5')">-</button>
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="item" id="item6">
-                    <img src="juice.png" alt="" class="img" id="juice-img">
+                    <img src="img/set 6.jpg" alt="" class="img" id="juice-img">
                     <p>juice - <b>610Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn6" onclick="decrementQuantity('quantity6')">-</button>
