Установил Меню (Сет 1 - Сет 6)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="container">
             <div class="inner">
                 <div class="item" id="item1">
-                    <img src="img/set 1.jpg" alt="" class="img" id="burger-img">
-                    <p>burger - <b>600Р</b></p>
+                    <img src="img/set 1.jpg" alt="" class="img">
+                    <p>set 1 - <b>600Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn1" onclick="decrementQuantity('quantity1')">-</button>
                         <span id="quantity1">0</span>
@@ -21,8 +21,8 @@
                 </div>
                 
                 <div class="item" id="item2">
-                    <img src="img/set 2.jpeg" alt="" class="img" id="pizza-img">
-                    <p>pizza - <b>450Р</b></p>
+                    <img src="img/set 2.jpeg" alt="" class="img">
+                    <p>set 2 - <b>450Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn2" onclick="decrementQuantity('quantity2')">-</button>
                         <span id="quantity2">0</span>
@@ -31,8 +31,8 @@
                 </div>
                 
                 <div class="item" id="item3">
-                    <img src="img/set 3.jpg" alt="" class="img" id="wok-img">
-                    <p>onigiri - <b>580Р</b></p>
+                    <img src="img/set 3.jpg" alt="" class="img">
+                    <p>set 3 - <b>580Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn3" onclick="decrementQuantity('quantity3')">-</button>
                         <span id="quantity3">0</span>
@@ -41,8 +41,8 @@
                 </div>
 
                 <div class="item" id="item4">
-                    <img src="img/set 4.jpg" alt="" class="img" id="onigiri-img">
-                    <p>rice - <b>490Р</b></p>
+                    <img src="img/set 4.jpg" alt="" class="img">
+                    <p>set 4 - <b>490Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn4" onclick="decrementQuantity('quantity4')">-</button>
                         <span id="quantity4">0</span>
@@ -51,8 +51,8 @@
                 </div>
 
                 <div class="item" id="item5">
-                    <img src="img/set 5.jpg" alt="" class="img" id="roll-img">
-                    <p>roll - <b>600Р</b></p>
+                    <img src="img/set 5.jpg" alt="" class="img">
+                    <p>set 5 - <b>600Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn5" onclick="decrementQuantity('quantity5')">-</button>
                         <span id="quantity5">0</span>
@@ -61,8 +61,8 @@
                 </div>
 
                 <div class="item" id="item6">
-                    <img src="img/set 6.jpg" alt="" class="img" id="juice-img">
-                    <p>juice - <b>610Р</b></p>
+                    <img src="img/set 6.jpg" alt="" class="img">
+                    <p>set 6 - <b>610Р</b></p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn6" onclick="decrementQuantity('quantity6')">-</button>
                         <span id="quantity6">0</span>
