--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <div class="item" id="item1">
                     <img src="img/set 1.jpg" alt="" class="img">
                     <p>set 1 - <b>600Р</b></p>
+                    <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn1" onclick="decrementQuantity('quantity1')">-</button>
                         <span id="quantity1">0</span>
@@ -23,6 +24,7 @@
                 <div class="item" id="item2">
                     <img src="img/set 2.jpeg" alt="" class="img">
                     <p>set 2 - <b>450Р</b></p>
+                    <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn2" onclick="decrementQuantity('quantity2')">-</button>
                         <span id="quantity2">0</span>
@@ -33,6 +35,7 @@
                 <div class="item" id="item3">
                     <img src="img/set 3.jpg" alt="" class="img">
                     <p>set 3 - <b>580Р</b></p>
+                    <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn3" onclick="decrementQuantity('quantity3')">-</button>
                         <span id="quantity3">0</span>
@@ -43,6 +46,7 @@
                 <div class="item" id="item4">
                     <img src="img/set 4.jpg" alt="" class="img">
                     <p>set 4 - <b>490Р</b></p>
+                    <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn4" onclick="decrementQuantity('quantity4')">-</button>
                         <span id="quantity4">0</span>
@@ -53,6 +57,7 @@
                 <div class="item" id="item5">
                     <img src="img/set 5.jpg" alt="" class="img">
                     <p>set 5 - <b>600Р</b></p>
+                    <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn5" onclick="decrementQuantity('quantity5')">-</button>
                         <span id="quantity5">0</span>
@@ -63,6 +68,7 @@
                 <div class="item" id="item6">
                     <img src="img/set 6.jpg" alt="" class="img">
                     <p>set 6 - <b>610Р</b></p>
+                    <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn6" onclick="decrementQuantity('quantity6')">-</button>
                         <span id="quantity6">0</span>
