тест изменение состава

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="item" id="item6">
                     <img src="img/set 6.jpg" alt="" class="img">
                     <p>set 6 - <b>610Р</b></p>
-                    <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
+                    <p>Состав: ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
                         <button class="btn" id="minusBtn6" onclick="decrementQuantity('quantity6')">-</button>
                         <span id="quantity6">0</span>
