--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="inner">
                 <div class="item" id="item1">
-                    <p>set 1 - <b>600Р</b></p>
+                    <p><h3>Set 1 - 600Р</h3></p>
                     <img src="img/set 1.jpg" alt="" class="img">
                     <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
@@ -26,7 +26,7 @@
                 </div>
                 
                 <div class="item" id="item2">
-                    <p>set 2 - <b>450Р</b></p>
+                    <p><h3>Set 2 - 450Р</h3></p>
                     <img src="img/set 2.jpeg" alt="" class="img">
                     <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
@@ -38,7 +38,7 @@
                 </div>
                 
                 <div class="item" id="item3">
-                    <p>set 3 - <b>580Р</b></p>
+                    <p><h3>Set 3 - 580Р</h3></p>
                     <img src="img/set 3.jpg" alt="" class="img">
                     <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="item" id="item4">
-                    <p>set 4 - <b>490Р</b></p>
+                    <p><h3>Set 4 - 490Р</h3></p>
                     <img src="img/set 4.jpg" alt="" class="img">
                     <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="item" id="item5">
-                    <p>set 5 - <b>600Р</b></p>
+                    <p><h3>Set 5 - 600Р</h3></p>
                     <img src="img/set 5.jpg" alt="" class="img">
                     <p>Состав: ролл Филадельфия в масаго, ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="item" id="item6">
-                    <p>set 6 - <b>610Р</b></p>
+                    <p><h3>Set 6 - 610Р</h3></p>
                     <img src="img/set 6.jpg" alt="" class="img">
                     <p>Состав: ролл Филадельфия в угре, ролл Калифорния в масаго, ролл Сочная креветка 815 г</p>
                     <div class="quantity-control">
